# humetric-store

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bench_compare.py  bench_pg.py  migrate_sqlite_to_pg.py  migrate_sqlite_to_surreal.py  renormalize_skills.py
src/humetric_store/: __init__.py  auth.py  db.py  edges.py  errors.py  organizations.py  persons.py  vectors.py
src/humetric_store/pg/: __init__.py  client.py  schema.py
src/humetric_store/surreal/: __init__.py  client.py  schema.py
tests/: conftest.py  test_auth.py  test_db_and_persons.py  test_organizations.py  test_vectors.py
