[project]
name = "humetric-store"
version = "0.1.0"
description = "SQLite + FAISS persistence layer for the Humetric workspace"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Po-Hsuan Lai" }]
dependencies = [
    "humetric-core>=0.1,<0.2",
    "faiss-cpu>=1.8,<2",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "ty>=0.0.35",
]
spike = [
    "surrealdb>=1.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]

[tool.uv.sources]
humetric-core = { path = "../humetric-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humetric_store"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF", "SIM", "TID"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
